jump button css fix

--- a/src/components/JumpButton.css
+++ b/src/components/JumpButton.css
@@ -18,8 +18,8 @@
 
 .JumpButton::after {
   content: '';
-  height: 110px !important;
-  width: 110px !important;
+  height: 100px !important;
+  width: 100px !important;
   position: absolute;
   transform-origin: center;
   background-color: var(--pale-yellow);
@@ -31,18 +31,18 @@
 @keyframes jump-button {
   from {
     scale: 0;
-    opacity: 1;
+    opacity: 0.5;
   }
   to {
     scale: 1;
-    opacity: 0.2;
+    opacity: 0.15;
   }
 }
 
 .JumpButton.clicked::after {
   scale: 1;
   opacity: 0;
-  animation: jump-button 0.3s ease-in-out;
+  animation: jump-button 0.15s ease-in-out;
 }
 
 @media (orientation: landscape) {
